# task-management-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 07708f3ed083_create_users_table.py  14189401f524_add_username_to_users.py  5bbbcf1b4ae7_add_reminder_sent_at_to_tasks.py  6185c7d68377_add_refresh_tokens_table.py  7564e699026b_add_username_history.py  79d6152fb55e_add_password_reset_tokens_table.py  8430a965bec3_add_oauth_accounts_and_email_.py  8dd22723e743_add_comment_mentions_and_task_mentions.py  aa0d2d5c9831_add_actor_id_to_mention_tables.py  aaab884725a5_add_avatar_path_to_users.py  b8a8a21299c5_add_comments_table.py  b96fecc35ffc_add_attachments_table.py  c52316c4b5e8_add_user_profile_fields.py  cf8fbcff6e3a_add_activity_logs_table.py  dfe1d6568f46_replace_assignee_id_with_task_assignees_.py  eed17af167b0_add_task_statuses_and_tasks_tables.py  ef676ec93430_add_projects_and_project_members_tables.py  f4e08b4f226a_replace_users_email_unique_with_partial_.py
app/: config.py  database.py  main.py  worker.py
app/api/: deps.py
app/api/v1/: attachments.py  auth.py  comments.py  projects.py  statuses.py  tasks.py  users.py
app/core/: arq_pool.py  cache.py  exceptions.py  logging.py  rate_limit.py  security.py  storage.py
app/models/: __init__.py  activity_log.py  attachment.py  comment.py  comment_mention.py  email_verification_token.py  oauth_account.py  password_reset_token.py  project.py  project_member.py  refresh_token.py  task.py  task_assignee.py  task_mention.py  task_status.py  user.py  username_history.py
app/schemas/: activity_log.py  attachment.py  auth.py  comment.py  project.py  status.py  task.py  user.py
app/services/: github.py  task_service.py
app/tasks/: email_tasks.py  email_templates.py  reminder_tasks.py
app/utils/: mentions.py  pagination.py
postman/: Task Management API.postman_collection.json
tests/: conftest.py
tests/integration/: test_api_attachments.py  test_api_auth.py  test_api_auth_github.py  test_api_comments.py  test_api_projects.py  test_api_statuses.py  test_api_tasks.py  test_api_users.py  test_reminder_tasks.py
tests/unit/: test_email_tasks.py  test_jwt.py  test_security.py  test_storage.py
