[project]
name = "task-management-api"
version = "0.1.0"
description = "Task Management API - FastAPI backend with Redis and PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "PyJWT[crypto]>=2.12.0",
    "structlog>=25.5.0",
    "filetype>=1.2.0",
    "boto3>=1.42.71",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "arq>=0.25.0",
    "aiosmtplib>=5.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
    "pre-commit>=4.5.1",
    "pip-audit>=2.0.0",
    "boto3-stubs[s3]>=1.42.73",
    "pytest-httpx>=0.35.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort (import sorting)
    "N", # pep8-naming
    "UP", # pyupgrade
    "ASYNC", # flake8-async (important for FastAPI)
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "S", # flake8-bandit (security)
    "PL", # pylint
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501", # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value in comparison
    "B008", # Do not perform function calls in argument defaults
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",
    "S101", # assert statements are intentional in tests
    "S105", # hardcoded test passwords are intentional
    "S106",
    "S107",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]  # Your package name

[tool.uv]
constraint-dependencies = [
    "requests>=2.33.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.coverage.run]
omit = [
    "app/worker.py",
    "app/main.py",
    "app/database.py",
    "app/core/arq_pool.py",
    "app/core/cache.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
